--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -12,9 +12,18 @@ h1 {
         
 img { 
     max-width: 100%; 
-    margin: 20px 0; 
+    margin: 20px 0;
+    border: 4px solid #b7b3b3;
 }
 
 p {
     color: white;
+}
+
+.apon-date {
+    font-weight: 600;
+}
+
+.apon-explanation {
+    text-align: justify;
 }
